--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.0",
+    "pino": "^8.11.0",
     "pug": "2.0.0-beta11",
     "sequelize": "^6.31.0"
   }
